# tauri-migraine-log

./: .releaserc.prerelease.yaml  .releaserc.yaml  CHANGELOG.md  README.md  babel.config.js  devlog.md  index.html  jest.config.cjs  package.json  report-template.md  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml  publish.yml  release.yml  semantic-release.yml
assets/: automerge_wasm_bg-BEjDkhWo.wasm  index-Bi18kvQQ.js  index-DBUOPBdc.css  index-DFSpHxJy.js  index-Dh9iw-xS.js  index-DypNp_Uz.js
docs/: auth-flow.puml
server/: .env  package.json
server/prisma/: dev.db  dev.db-journal  schema.prisma
server/src/: index.ts
src/: db.ts  error-page.tsx  main.tsx  providers.tsx  react-weather-widget.d.ts  routeTree.gen.ts  router.tsx  schema.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs
src/automergeRepo/: automergeRepo.ts
src/components/: AudioPlayer.test.tsx  AudioPlayer.tsx  CreateEntryForm.tsx  EntryForm.test.tsx  Layout.tsx  ManagementStepLogger.tsx  PodcastPlayer.tsx  QRCode.tsx  SettingsForm.tsx  SmartBreadcrumb.tsx  WeatherWidget.tsx  mode-toggle.tsx  theme-provider.tsx
src/hooks/: _queries.ts  auth.tsx  db.ts  document.ts  document.tsx  queries.ts  useGeolocation.ts  user.ts
src/lib/: auth.ts
src/routes/: Create.tsx  Edit.tsx  Home.tsx  Settings.tsx  View.tsx  __root.tsx  create.tsx  index.tsx  login.tsx  register.tsx  root.tsx
src/utils/: router.ts  trpc.ts
tests/: AudioPlayer.test.tsx  EntryForm.test.tsx  setup.js  test-utils.tsx
(+34 files in other folders)
