[package]
name = "migrainelog"
version = "0.2.0"
description = "A local-first desktop application easily logging and reviewing your migraine episodes."
authors = ["Tim Hunter"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_migraine_log_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.1.1-rc", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
local-ip-address = "0.6.3"
